--- a/TensorflowBasics.ipynb
+++ b/TensorflowBasics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPv1oxi7hWBVlE8g6Hv+tsd",
+      "authorship_tag": "ABX9TyP1f/c0+PB1AmURYB2/6mEu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,92 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "6_5HtxNudrBE"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6_5HtxNudrBE",
+        "outputId": "535aacf0-5e11-4485-fc8d-709fb6b846fa"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.12.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "import tensorflow as tf\n",
+        "print(tf.__version__)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=tf.constant([\n",
+        " [   [1,2,4],\n",
+        "    [1,2,5],\n",
+        "    [1,2,33]\n",
+        "],[ [1,2,4],\n",
+        "    [1,2,5],\n",
+        "    [1,2,33]],[ [1,2,4],\n",
+        "    [1,2,5],\n",
+        "    [1,2,33]]])"
+      ],
+      "metadata": {
+        "id": "eEOiWjaGeaZZ"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V1PWSgJOeaV3",
+        "outputId": "ac029ac2-38cd-4d35-a671-02b20e70846e"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 3, 3), dtype=int32, numpy=\n",
+              "array([[[ 1,  2,  4],\n",
+              "        [ 1,  2,  5],\n",
+              "        [ 1,  2, 33]],\n",
+              "\n",
+              "       [[ 1,  2,  4],\n",
+              "        [ 1,  2,  5],\n",
+              "        [ 1,  2, 33]],\n",
+              "\n",
+              "       [[ 1,  2,  4],\n",
+              "        [ 1,  2,  5],\n",
+              "        [ 1,  2, 33]]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RXp4ZZsqeYIh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
